# angular/projects/api/src/lib/models.ts
@@ -2,12 +2,10 @@
 /* eslint-disable */
 export { Application } from './models/application';
 export { CreateApplication } from './models/create-application';
-export { CreateToken } from './models/create-token';
 export { CreateTrack } from './models/create-track';
 export { ErrorDetails } from './models/error-details';
 export { PushToken } from './models/push-token';
 export { Track } from './models/track';
 export { UpdateApplication } from './models/update-application';
-export { UpdateToken } from './models/update-token';
 export { UpdateTrack } from './models/update-track';
 export { Version } from './models/version';
