# angular/projects/api/src/lib/models/create-token.ts
@@ -1,5 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export interface CreateToken {
-  allowedApps?: Array<string>;
-}
