# angular/projects/api/src/lib/models/push-token.ts
@@ -1,7 +1,6 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface PushToken {
-  allowedApps?: Array<string>;
   id?: string;
   token: string;
 }
