# angular/projects/api/src/lib/models/update-token.ts
@@ -1,5 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export interface UpdateToken {
-  allowedApps?: Array<string>;
-}
